Java 21 Support (#1440)
* Switch back to Mojo aspectj plugin for Java 21 support

* Update AspectJ

* Update Jacoco plugin to support Java 21

* Update to Mockito 5 for Java 21 support

* update dependencies

* feat: use java 21 image

* Update spring framework dependency

* Explicitly enable annotation processing during compilation.

[INFO] Annotation processing is enabled because one or more processors were found
  on the class path. A future release of javac may disable annotation processing
  unless at least one processor is specified by name (-processor), or a search
  path is specified (--processor-path, --processor-module-path), or annotation
  processing is enabled explicitly (-proc:only, -proc:full).
  Use -Xlint:-options to suppress this message.
  Use -proc:none to disable annotation processing.

* Mock and Spy integration test components

* Rename duplicate classes

* Fix Tag import

* Use MockFactoryBean everywhere

* Upgraded shedlock to latest

"If you are using JDK >17 and up-to-date libraries like Spring 6, use version 5.1.0 (Release Notes)" according to https://github.com/lukas-krecan/ShedLock

* Shedlock breaks with latest Spring

* Specify aspectj mode for cache configuration

* Specify aspectj mode for scheduler config

* Updated Spring by applying AOP workaround suggested in https://github.com/spring-projects/spring-framework/issues/32882#issuecomment-2127283683

"These problems come from mixed AspectJ weaving and proxying. In your scenario, you seem to be using @EnableTransactionManagement in AspectJ mode but @EnableCaching in proxy mode. For the time being, you could try to switch @EnableCaching and any other aspect-related functionality to AspectJ mode as well and remove any variant of@EnableAspectJAutoProxy completely, if that is feasible for your application."

* Replace deprecated thread.getId() with threadId().

* use whois-build:v0.0.5 - java21, amazoncorretto, node18, firefox114

------